# agent-credit-x402

./: .gitignore  2.txt  LICENSE  README.md  skills-lock.json
.agents/skills/okx-agentic-wallet/: SKILL.md
.agents/skills/okx-audit-log/: SKILL.md
.agents/skills/okx-defi-invest/: SKILL.md
.agents/skills/okx-defi-portfolio/: SKILL.md
.agents/skills/okx-dex-market/: SKILL.md
.agents/skills/okx-dex-signal/: SKILL.md
.agents/skills/okx-dex-swap/: SKILL.md
.agents/skills/okx-dex-token/: SKILL.md
.agents/skills/okx-dex-trenches/: SKILL.md
.agents/skills/okx-dex-ws/: SKILL.md
.agents/skills/okx-onchain-gateway/: SKILL.md
.agents/skills/okx-security/: SKILL.md
.agents/skills/okx-wallet-portfolio/: SKILL.md
.agents/skills/okx-x402-payment/: SKILL.md
backend/: .env.example  .gitignore  Cargo.toml
backend/scripts/: README-WALLET.md  generate-wallet.js
backend/src/: agent_loop.rs  api.rs  auth.rs  config.rs  db.rs  http_client.rs  main.rs
backend/src/engine/: collateral_mgr.rs  credit_scoring.rs  liquidator.rs  reputation_engine.rs  task_engine.rs  x402_lending.rs
frontend/: .env.local  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/__tests__/: CreditScoreCard.test.tsx  LoanManager.test.tsx  Spinner.test.tsx  TransactionHistory.test.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CreditScoreCard.tsx  CreditScoreChart.tsx  LoanManager.tsx  ThemeProvider.tsx  ThemeToggle.tsx  TransactionHistory.tsx
frontend/src/lib/: api.ts  constants.ts  websocket.ts
(+9 files in other folders)
