[package]
name = "agent-credit-x402"
version = "0.1.0"
edition = "2021"
authors = ["AgentCredit Team"]
description = "AI Agent Lending Hub with x402 protocol on X Layer"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["json", "ws"] }

# EVM interactions (Alloy - replacing ethers-rs)
alloy = { version = "0.1", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment variables
dotenvy = "0.15"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Concurrency primitives
tokio-util = "0.7"

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# CORS middleware
tower-http = { version = "0.5", features = ["cors"] }

# Database - SQLite with sqlx
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono", "uuid"] }

# Futures utility
futures-util = "0.3"

# WebSocket streams
tokio-tungstenite = "0.21"

# JWT Authentication
jsonwebtoken = "9.2"
bcrypt = "0.15"
